Fix overflow

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -12,7 +12,6 @@
 }
 
 .main-content {
-  overflow-y: hidden;
 
   & > .section {
     margin-top: 0;
